# nvidia-hackathon-2025-caixin-email-backend

./: .coderabbit.yaml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .nspect-allowlist.toml  .pre-commit-config.yaml  .vale.ini  CHANGELOG.md  CONTRIBUTING.md  README.md  nat.code-workspace  pyproject.toml  start.sh  test.py
.cursor/rules/: cursor-rules.mdc  general.mdc
.devcontainer/: Dockerfile  README.md  docker-compose.yml  initialize-command.sh
.devcontainer/cuda12.5-conda/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_request_correction.yml  documentation_request_new.yml  feature_request.yml
.github/workflows/: ci_pipe.yml  pr.yaml
.venv-clean/: pyvenv.cfg
ci/: markdown-link-check-config.json
ci/release/: update-version.sh  update_doc_versions1.py
ci/scripts/: bootstrap_local_ci.sh  checks.sh  common.sh  copyright.py  gitutils.py  path_checks.py  run_ci_local.sh
configs/: hackathon_config.yml
docker/: Dockerfile
docs/: Makefile  README.md
docs/source/: code-of-conduct.md  conf.py  index.md  release-notes.md  support.md  troubleshooting.md  versions1.json
examples/: README.md
examples/HITL/simple_calculator_hitl/: README.md  pyproject.toml
examples/HITL/simple_calculator_hitl/configs/: config-hitl.yml
examples/HITL/simple_calculator_hitl/src/aiq_simple_calculator_hitl/: retry_react_agent.py
examples/HITL/simple_calculator_hitl/src/aiq_simple_calculator_hitl/configs/: config-hitl.yml
examples/HITL/simple_calculator_hitl/src/nat_simple_calculator_hitl/: register.py  retry_react_agent.py
examples/UI/: README.md
examples/agents/: README.md
examples/agno_personal_finance/: Dockerfile  README.md  pyproject.toml
examples/alert_triage_agent/: .env_example  README.md  configs  data  pyproject.toml
examples/automated_description_generation/: README.md  pyproject.toml
examples/custom_functions/plot_charts/: README.md  pyproject.toml
examples/custom_functions/plot_charts/src/aiq_plot_charts/: register.py
examples/custom_functions/plot_charts/tests/: test_plot_charts_workflow.py
examples/deploy/: README.md  docker-compose.minio.yml  docker-compose.mysql.yml
examples/documentation_guides/: README.md
examples/email_phishing_analyzer/: Dockerfile  README.md  pyproject.toml
examples/evaluation_and_profiling/simple_calculator_eval/: README.md  pyproject.toml
examples/evaluation_and_profiling/simple_calculator_eval/configs/: config-sizing-calc.yml  config-tunable-rag-eval.yml
examples/evaluation_and_profiling/simple_calculator_eval/src/nat_simple_calculator_eval/configs/: config-with-custom-post-process.yml
examples/evaluation_and_profiling/simple_calculator_eval/src/nat_simple_calculator_eval/data/: simple_calculator_nested.json
examples/evaluation_and_profiling/simple_calculator_eval/src/nat_simple_calculator_eval/scripts/: custom_post_process.py
examples/frameworks/semantic_kernel_demo/: README.md  configs  pyproject.toml
examples/frameworks/semantic_kernel_demo/src/nat_semantic_kernel_demo/: register.py
examples/frameworks/semantic_kernel_demo/tests/: test_semantic_kernel_workflow.py
examples/front_ends/simple_auth/: README.md  pyproject.toml
examples/front_ends/simple_auth/configs/: config.yml
examples/front_ends/simple_auth/src/aiq_simple_auth/: ip_lookup.py
examples/front_ends/simple_auth/src/nat_simple_auth/: register.py
examples/front_ends/simple_auth/src/nat_simple_auth/configs/: config.yml
examples/front_ends/simple_auth/src/simple_auth/: ip_lookup.py
examples/front_ends/simple_auth/src/simple_auth/configs/: config.yml
examples/front_ends/simple_calculator_custom_routes/: README.md  pyproject.toml
examples/getting_started/simple_calculator/: Dockerfile  README.md  pyproject.toml
examples/getting_started/simple_calculator/src/nat_simple_calculator/: register.py
examples/getting_started/simple_calculator/src/nat_simple_calculator/data/: simple_calculator.json
examples/getting_started/simple_calculator/tests/: test_simple_calculator_workflow.py  test_tools.py
examples/mcp_server/: Dockerfile  README.md
examples/memory/: README.md
examples/multi_frameworks/: README.md  pyproject.toml
examples/notebooks/: 2_add_tools_and_agents.ipynb  (+1 more)
examples/object_store/user_report/: README.md  pyproject.toml  serialize_file.py  upload_to_mysql.sh
examples/object_store/user_report/configs/: config_mem.yml  config_mysql.yml  config_redis.yml  config_s3.yml
examples/object_store/user_report/src/aiq_user_report/: user_report_tools.py
examples/object_store/user_report/src/nat_user_report/: register.py  user_report_tools.py
examples/object_store/user_report/tests/: test_user_report_tool.py
examples/profiler_agent/: README.md  configs  pyproject.toml
examples/profiler_agent/src/aiq_profiler_agent/: register.py
examples/profiler_agent/src/aiq_profiler_agent/configs/: config.yml
examples/profiler_agent/src/aiq_profiler_agent/tool/: flow_chart.py
examples/simple/: Dockerfile  README.md  pyproject.toml
examples/simple/src/aiq_simple/configs/: eval_config.yml  eval_config_llama31.yml  eval_config_llama33.yml  eval_config_openai.yml  eval_config_weave.yml  eval_upload_config.yml
examples/simple/tests/: test_web_query_tool.py
mytools/caixin_scrapper/: pyproject.toml
mytools/caixin_scrapper/src/caixin_scrapper/: caixin_login_tool.py  caixin_scrapper_function.py  register.py  run_caixin_page_scrapper.py  test_caixin_scrapper_login.py
mytools/caixin_scrapper/src/caixin_scrapper/configs/: config.yml
mytools/email_newsletter/: pyproject.toml
mytools/email_newsletter/src/email_newsletter/: email_newsletter_function.py  register.py  test_email_newsletter.py
mytools/email_newsletter/src/email_newsletter/configs/: config.yml
mytools/mem0_memory/: pyproject.toml
mytools/mem0_memory/configs/: config.yml
mytools/mem0_memory/src/mem0_memory/: redis_editor.py  register.py
mytools/mem0_memory/src/mem0_memory/configs/: config.yml
scripts/: langchain_web_ingest.py
src/aiq/: __init__.py
tests/: conftest.py
(+892 files in other folders)
