[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../.."

[project]
name = "aiq_agno_personal_finance"
dynamic = ["version"]
dependencies = [
  "aiqtoolkit[agno]",
  "openai~=1.66",
  "litellm~=1.63.14"
]
requires-python = ">=3.11"
description = "Custom AIQ Toolkit Workflow using Agno for personal finance"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
aiqtoolkit = { path = "../..", editable = true }

[project.entry-points.'aiq.components']
aiq_agno_personal_finance = "aiq_agno_personal_finance.register"
