[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "email_newsletter"
version = "0.1.0"
dependencies = [
  "nvidia-nat[langchain]~=1.3",
]
requires-python = ">=3.11,<3.13"
description = "Custom NeMo Agent Toolkit Workflow"
classifiers = ["Programming Language :: Python"]



[project.entry-points.'nat.components']
email_newsletter = "email_newsletter.register"