[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "mem0_memory"
version = "0.1.0"
dependencies = [
  "nvidia-nat[langchain]",
]
requires-python = ">=3.11,<3.13"
description = "Custom NeMo Agent Toolkit Workflow"
classifiers = ["Programming Language :: Python"]



[project.entry-points.'nat.components']
mem0_memory = "mem0_memory.register"