[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "nat_semantic_kernel_demo"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[langchain,mem0ai,semantic-kernel]~=1.3",
  "faiss-cpu==1.9.0",
]
requires-python = ">=3.11,<3.13"
description = "Semantic Kernel Example"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_semantic_kernel_demo = "nat_semantic_kernel_demo.register"
