[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "aiq_simple_auth"
dynamic = ["version"]
dependencies = [
  "nvidia-nat",
  "nvidia-nat[langchain]",
  "httpx",
]
requires-python = ">=3.11,<3.13"
description = "Custom AIQ Toolkit Workflow"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'aiq.components']
simple_auth = "aiq_simple_auth.register"
