[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "aiq_simple_calculator"
dynamic = ["version"]
dependencies = ["nvidia-nat[langchain]~=1.2"]
requires-python = ">=3.11,<3.13"
description = "Simple Calculator NeMo Agent toolkit example"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'aiq.components']
aiq_simple_calculator = "aiq_simple_calculator.register"
